[gd_scene load_steps=4 format=3 uid="uid://bgsxf6cf8q276"]

[ext_resource type="Script" path="res://scripts/volume_options.gd" id="1_63qig"]
[ext_resource type="Texture2D" uid="uid://cg3sxr8hixj3q" path="res://images/button_bg.png" id="2_s50rn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tn4lm"]
texture = ExtResource("2_s50rn")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_63qig")

[node name="volume_button" type="Button" parent="."]
layout_mode = 0
offset_left = 1064.0
offset_top = 5.0
offset_right = 1141.0
offset_bottom = 25.0
theme_override_styles/normal = SubResource("StyleBoxTexture_tn4lm")

[node name="volume_bar" type="HSlider" parent="volume_button"]
layout_mode = 0
offset_left = -20.0
offset_top = 25.0
offset_right = 88.0
offset_bottom = 41.0

[node name="mute_button" type="CheckBox" parent="volume_button"]
layout_mode = 0
offset_left = 29.0
offset_top = 44.0
offset_right = 53.0
offset_bottom = 68.0

[connection signal="pressed" from="volume_button" to="." method="_on_volume_button_pressed"]
[connection signal="value_changed" from="volume_button/volume_bar" to="." method="_on_volume_bar_value_changed"]
[connection signal="toggled" from="volume_button/mute_button" to="." method="_on_mute_button_toggled"]
